fix text alignment; fix css overselection issues

--- a/style_main.css
+++ b/style_main.css
@@ -211,6 +211,7 @@ h3{
   padding-top: 40px;
   padding-right: 100px;
   padding-left: 100px;
+  color: rgb(163, 163, 163);
 }
 
 .first{
@@ -277,7 +278,7 @@ h3{
 }
 
 #cards_section{
-  padding: 10% 10% 5% 10%;
+  padding: 10% 0% 10% 0%;
 }
 
 #card_content{
@@ -293,15 +294,23 @@ h3{
   margin-bottom: 30px;
 }
 
-#card_intro > h1, p{
-  padding: 0px 50px 15px 50px;
+#card_intro h1, #card_intro p{
+  padding: 0px 20px 15px 20px;
   text-align: center;
 }
 
 #cards{
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: row;
+}
+
+#cards > .card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px;
+  width: 360px;
 }
 
 .card > .img_mask{
@@ -309,13 +318,7 @@ h3{
   width: 280px;
   padding: 15px;
   margin: 15px 25px 15px 25px;
-  box-shadow: 0 -2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-}
-
-#cards > .card{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 1px 10px -10px rgba(0, 0, 0, 0.19);
 }
 
 .img_mask > img{
@@ -327,6 +330,10 @@ h3{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.card_text p{
+  text-align: center;
 }
 
 #action_section{
@@ -380,30 +387,37 @@ h3{
   flex-direction: column;
 }
 
+#body_content p{
+  padding: 10px 100px 15px 0px;
+}
 /*    Current Issues Page Content     */
 
 #issue_section{
   padding: 0% 10% 5% 10%;
 }
 
-#issue_content{
+.issue_content{
   display: flex;
   flex-direction: column;
 }
 
-#issue_title_cont{
+.issue_content p{
+  padding: 0px 20px 15px 0px;
+}
+
+.issue_title_cont{
   display: flex;
   flex-direction: row;
   align-items: baseline;
   justify-content: space-between;
 }
 
-#contents{
+.contents{
   margin-top: 20px;
   padding: 20px 0px 0px 20px;
 }
 
-#editors:after {
+.editors:after {
   content : "";
   position: absolute;
   left    : 25%;
@@ -427,6 +441,7 @@ h3{
   align-items: baseline;
   justify-content: space-between;
 }
+
 ul{
   list-style-type: none;
 }
